force-app/main/default/objects/Account/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>LinkedIn URL</description>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>