force-app/main/default/objects/Account/fields/Primary_Experience_Reference__c.field-meta.xml
<CustomField>
    <fullName>Primary_Experience_Reference__c</fullName>
    <description>Sets the Account&#39;s primary reference to show experience on Opportunity</description>
    <label>Primary Experience Reference</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
                <default>true</default>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>