force-app/main/default/objects/Account/fields/Trailhead_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_URL__c</fullName>
    <description>Salesforce Trailhead profile URL</description>
    <label>Trailhead URL</label>
    <type>Url</type>
</CustomField>